# STM32_Bootloader

./: .gitignore  CMakeLists.txt  Makefile  README.md
Core/Inc/: main.h
Core/Src/: main.c  stm32f4xx_hal_msp.c  sysmem.c
Drivers/CMSIS/Device/ST/STM32F4xx/Include/: stm32f4xx.h
Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal.h
Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_crc.c
HOST/: STM32_Programmer_V1.py
app/: linkerscript.ld
app/inc/: common_defines.h
